--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,8 @@
         android:layout_alignParentStart="true"
 
         android:layout_alignParentTop="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="0dp"
         android:scaleType="fitStart"
         app:layout_constraintVertical_bias="0.955"
         app:srcCompat="@drawable/principal" />
