--- a/app/src/main/res/layout/fragment_frg_gestionar_producto.xml
+++ b/app/src/main/res/layout/fragment_frg_gestionar_producto.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/frgGestionarProducto"
     tools:context=".frgGestionarProducto">
+    android:id="@+id/frgGestionarProducto"
 
     <ScrollView
         android:layout_width="match_parent"
