--- a/app/src/main/res/layout/fragment_frg_gestionar_repartidores.xml
+++ b/app/src/main/res/layout/fragment_frg_gestionar_repartidores.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".frgGestionarRepartidores">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rclRepartidores"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="GESTIONAR REPARTIDORES" />
+        android:layout_height="match_parent">
 
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="15dp"
+        android:src="@drawable/mas" />
 </FrameLayout>
