--- a/app/src/main/res/layout/fragment_frg_inicio_admin.xml
+++ b/app/src/main/res/layout/fragment_frg_inicio_admin.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".frgInicioAdmin">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnNuevoProducto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="15dp"
+        android:src="@drawable/mas" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,7 +35,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="5dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
 
         </androidx.recyclerview.widget.RecyclerView>
@@ -54,17 +61,6 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/btnNuevoProducto"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="170dp"
-                    android:background="@drawable/bordes_redondos2"
-                    android:text="Nuevo"
-                    android:textAlignment="center"
-                    android:textColor="#689F38"
-                    android:textStyle="bold" />
 
             </LinearLayout>
 
