--- a/app/src/main/res/layout/fragment_frg_gestionar_combo.xml
+++ b/app/src/main/res/layout/fragment_frg_gestionar_combo.xml
@@ -1,14 +1,276 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/frgGestionarCombo"
     tools:context=".frgGestionarCombo">
+    android:id="@+id/frgGestionarCombo"
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="GESTIONAR COMBO" />
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:layout_width="286dp"
+                android:layout_height="51dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
+                android:layout_marginStart="63dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginEnd="62dp"
+                android:gravity="center"
+                android:text="Combo"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="141dp"
+                android:layout_height="37dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="84dp"
+                android:layout_marginEnd="1dp"
+                android:text="Nombre:"
+                android:textSize="15dp" />
+
+            <EditText
+                android:id="@+id/txtNombreCombo"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:width="80dp"
+                android:hint="Nombre"
+                android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="141dp"
+                android:layout_height="37dp"
+                android:layout_below="@+id/textView11"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="43dp"
+                android:layout_marginEnd="1dp"
+                android:text="Descripción:"
+                android:textSize="15dp" />
+
+            <EditText
+                android:id="@+id/txtDescripcionCombo"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtNombreCombo"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:width="100dp"
+                android:hint="Descripción"
+                android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="141dp"
+                android:layout_height="37dp"
+                android:layout_below="@+id/textView12"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="43dp"
+                android:layout_marginEnd="1dp"
+                android:text="Precio:"
+                android:textSize="15dp" />
+
+
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="141dp"
+                android:layout_height="37dp"
+                android:layout_below="@+id/textView13"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="43dp"
+                android:layout_marginEnd="1dp"
+                android:text="Cantidad:"
+                android:textSize="15dp" />
+
+            <EditText
+                android:id="@+id/txtPrecioCombo"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtDescripcionCombo"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:width="100dp"
+                android:hint="Precio"
+                android:inputType="textPersonName" />
+
+
+            <EditText
+                android:id="@+id/txtStockCombo"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtPrecioCombo"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="22dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:width="100dp"
+                android:hint="Cantidad"
+                android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="141dp"
+                android:layout_height="37dp"
+                android:layout_below="@+id/textView14"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="43dp"
+                android:layout_marginEnd="1dp"
+                android:text="Descuento:"
+                android:textSize="15dp" />
+            <EditText
+                android:id="@+id/txtDescuentoCombo"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtStockCombo"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:width="100dp"
+                android:hint="Descuento"
+                android:inputType="textPersonName"
+                android:text="0" />
+
+            <Button
+                android:id="@+id/btnadd"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_below="@+id/txtDescuentoCombo"
+                android:layout_alignParentEnd="true"
+                android:layout_marginLeft="180dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="22dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/bordes_redondos2"
+                android:text="  Añadir producto  "
+                android:textAlignment="center"
+                android:textColor="#689F38" />
+
+            <ScrollView
+                android:id="@+id/scrLista"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_below="@+id/btnadd"
+                android:outlineAmbientShadowColor="@color/cardview_dark_background">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+
+                </LinearLayout>
+            </ScrollView>
+
+            <LinearLayout
+                android:id="@+id/lyfoto"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/scrLista"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnFoto"
+                    android:layout_width="130dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/bordes_redondos2"
+
+                    android:gravity="center"
+                    android:text="Foto"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imgFoto"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_below="@+id/lyfoto"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@drawable/verduras" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/imgFoto"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="0dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnRegistrarCombo"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/bordes_redondos"
+                    android:color="#689F38"
+                    android:text="Guardar"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btnCancelar"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/bordes_redondos"
+
+                    android:color="#689F38"
+                    android:text="Cancelar"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 </FrameLayout>
