--- a/app/src/main/res/layout/fragment_frg_gestionar_repartidores.xml
+++ b/app/src/main/res/layout/fragment_frg_gestionar_repartidores.xml
@@ -6,12 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".frgGestionarRepartidores">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rclRepartidores"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+            android:id="@+id/txtCategoria2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+
+            android:gravity="center|center_horizontal"
+            android:text="Repartidores"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rclRepartidores"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
