--- a/app/src/main/res/layout/fragment_frg_inicio_admin.xml
+++ b/app/src/main/res/layout/fragment_frg_inicio_admin.xml
@@ -69,7 +69,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/linear"
-                android:layout_marginTop="5dp">
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-20dp"
+                android:layout_marginEnd="0dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
