--- a/app/src/main/res/layout/fragment_frg_gestionar_repartidores.xml
+++ b/app/src/main/res/layout/fragment_frg_gestionar_repartidores.xml
@@ -12,14 +12,19 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtCategoria2"
+            android:id="@+id/textView17"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-
-            android:gravity="center|center_horizontal"
+            android:layout_height="51dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="63dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="62dp"
+            android:gravity="center"
             android:text="Repartidores"
-            android:textSize="18sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
