--- a/app/src/main/res/layout/itemrepart.xml
+++ b/app/src/main/res/layout/itemrepart.xml
@@ -2,16 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_margin="1dp"
     android:layout_marginRight="2dp">
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        app:cardBackgroundColor="#E3E3E3"
         android:elevation="5dp"
         app:cardMaxElevation="2dp">
 
@@ -21,8 +24,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_foto"
-                android:layout_width="67dp"
-                android:layout_height="73dp"
+                android:layout_width="80dp"
+                android:layout_height="94dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_centerVertical="true"
@@ -38,7 +41,9 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="113dp"
                 android:layout_marginTop="7dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txtCorreo"
@@ -59,6 +64,19 @@
                 android:layout_marginStart="114dp"
                 android:layout_marginBottom="35dp"
                 android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="Editar"
+                android:textAlignment="viewEnd"
+                android:textColor="#3F51B5"
+                android:textStyle="italic" />
 
 
         </RelativeLayout>
